--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ h1 span
 .additemsA
 {
     color: black;
-    border: 1px solid blue;
+    border: 1px solid rgb(43, 43, 255);
     border-radius: 50%;
     background-color: rgb(0, 136, 255);
     font-size: 35px;
